--- a/climate_analysis.ipynb
+++ b/climate_analysis.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -4594,14 +4594,39 @@
       "2017-08-23           0.08\n",
       "2017-08-23           0.45\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "# Design a query to retrieve the last 12 months of precipitation data and plot the results. \n",
+    "#Starting from the last data point in the database. \n",
+    "prev_year = dt.date(2017, 8, 23)\n",
+    "# Calculate the date one year from the last date in data set.\n",
+    "prev_year = dt.date(2017, 8, 23) - dt.timedelta(days=365)\n",
+    "# Perform a query to retrieve the data and precipitation scores\n",
+    "results = []\n",
+    "results = session.query(Measurement.date, Measurement.prcp).filter(Measurement.date >= prev_year)\n",
+    "\n",
+    "# Save the query results as a Pandas DataFrame and set the index to the date column\n",
+    "df = pd.DataFrame(results, columns=['date','precipitation'])\n",
+    "# Sort the dataframe by date\n",
+    "df.set_index(df['date'], inplace=True)\n",
+    "print(df.to_string(index=False))\n",
+    "df = df.sort_index()\n",
+    "print(df.to_string(index=False))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
        "<AxesSubplot:xlabel='date'>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4617,23 +4642,6 @@
     }
    ],
    "source": [
-    "# Design a query to retrieve the last 12 months of precipitation data and plot the results. \n",
-    "#Starting from the last data point in the database. \n",
-    "prev_year = dt.date(2017, 8, 23)\n",
-    "# Calculate the date one year from the last date in data set.\n",
-    "prev_year = dt.date(2017, 8, 23) - dt.timedelta(days=365)\n",
-    "# Perform a query to retrieve the data and precipitation scores\n",
-    "results = []\n",
-    "results = session.query(Measurement.date, Measurement.prcp)\n",
-    "results = session.query(Measurement.date, Measurement.prcp).filter(Measurement.date >= prev_year)\n",
-    "\n",
-    "# Save the query results as a Pandas DataFrame and set the index to the date column\n",
-    "df = pd.DataFrame(results, columns=['date','precipitation'])\n",
-    "# Sort the dataframe by date\n",
-    "df.set_index(df['date'], inplace=True)\n",
-    "print(df.to_string(index=False))\n",
-    "df = df.sort_index()\n",
-    "print(df.to_string(index=False))\n",
     "# Use Pandas Plotting with Matplotlib to plot the data\n",
     "df.plot()"
    ]
@@ -5207,7 +5215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": []
