--- a/SurfsUp_Challenge.ipynb
+++ b/SurfsUp_Challenge.ipynb
@@ -87,25 +87,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "            date  tobs\n",
-      "0     2010-06-01  78.0\n",
-      "1     2010-06-02  76.0\n",
-      "2     2010-06-03  78.0\n",
-      "3     2010-06-04  76.0\n",
-      "4     2010-06-05  77.0\n",
-      "...          ...   ...\n",
-      "1695  2017-06-26  79.0\n",
-      "1696  2017-06-27  74.0\n",
-      "1697  2017-06-28  74.0\n",
-      "1698  2017-06-29  76.0\n",
-      "1699  2017-06-30  75.0\n",
+      "            date  June Temps\n",
+      "0     2010-06-01        78.0\n",
+      "1     2010-06-02        76.0\n",
+      "2     2010-06-03        78.0\n",
+      "3     2010-06-04        76.0\n",
+      "4     2010-06-05        77.0\n",
+      "...          ...         ...\n",
+      "1695  2017-06-26        79.0\n",
+      "1696  2017-06-27        74.0\n",
+      "1697  2017-06-28        74.0\n",
+      "1698  2017-06-29        76.0\n",
+      "1699  2017-06-30        75.0\n",
       "\n",
       "[1700 rows x 2 columns]\n"
      ]
@@ -113,13 +113,13 @@
    ],
    "source": [
     "# 4. Create a DataFrame from the list of temperatures for the month of June. \n",
-    "june_temps_df = pd.DataFrame(june_results, columns=['date','tobs'])\n",
+    "june_temps_df = pd.DataFrame(june_results, columns=['date','June Temps'])\n",
     "print(june_temps_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>tobs</th>\n",
+       "      <th>June Temps</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -184,7 +184,7 @@
        "</div>"
       ],
       "text/plain": [
-       "              tobs\n",
+       "        June Temps\n",
        "count  1700.000000\n",
        "mean     74.944118\n",
        "std       3.257417\n",
@@ -195,7 +195,7 @@
        "max      85.000000"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,25 +235,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "            date  tobs\n",
-      "0     2010-12-01  76.0\n",
-      "1     2010-12-03  74.0\n",
-      "2     2010-12-04  74.0\n",
-      "3     2010-12-06  64.0\n",
-      "4     2010-12-07  64.0\n",
-      "...          ...   ...\n",
-      "1512  2016-12-27  71.0\n",
-      "1513  2016-12-28  71.0\n",
-      "1514  2016-12-29  69.0\n",
-      "1515  2016-12-30  65.0\n",
-      "1516  2016-12-31  65.0\n",
+      "            date  Dec Temps\n",
+      "0     2010-12-01       76.0\n",
+      "1     2010-12-03       74.0\n",
+      "2     2010-12-04       74.0\n",
+      "3     2010-12-06       64.0\n",
+      "4     2010-12-07       64.0\n",
+      "...          ...        ...\n",
+      "1512  2016-12-27       71.0\n",
+      "1513  2016-12-28       71.0\n",
+      "1514  2016-12-29       69.0\n",
+      "1515  2016-12-30       65.0\n",
+      "1516  2016-12-31       65.0\n",
       "\n",
       "[1517 rows x 2 columns]\n"
      ]
@@ -261,13 +261,13 @@
    ],
    "source": [
     "# 8. Create a DataFrame from the list of temperatures for the month of December. \n",
-    "dec_temps_df = pd.DataFrame(dec_results, columns=['date','tobs'])\n",
+    "dec_temps_df = pd.DataFrame(dec_results, columns=['date','Dec Temps'])\n",
     "print(dec_temps_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>tobs</th>\n",
+       "      <th>Dec Temps</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -332,7 +332,7 @@
        "</div>"
       ],
       "text/plain": [
-       "              tobs\n",
+       "         Dec Temps\n",
        "count  1517.000000\n",
        "mean     71.041529\n",
        "std       3.745920\n",
@@ -343,7 +343,7 @@
        "max      83.000000"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
